tests/functional/lang/eval-fail/missing-arg-import.err.exp
error:
       … from call site
         at /pwd/lang/eval-fail/missing-arg-import.nix:1:1:
            1| import ../non-eval-trivial-lambda-formals.nix { }
             | ^
            2|

       error: function 'anonymous lambda' called without required argument 'a'
       at /pwd/lang/non-eval-trivial-lambda-formals.nix:1:1:
            1| { a }: a
             | ^
            2|
